@@ -24,6 +24,8 @@ Changes from 0.3 to 0.4
   for internal carray operation.  Defaults that are currently
   implemented: `eval_out_flavor` and `eval_vm`.
 
+- Fixed a bug with `carray.sum()` for multidimensional types.
+
 - Added a `limit` parameter to `iter`, `where` and `wheretrue` iterators
   of carray object and to `iter` and `where` of ctable object.
 
